@@ -19,6 +19,14 @@ include("../header.inc");
 <li><p>If you own Visual Studio 2005 (newer versions of Visual Studio are currently unsupported):</p>
 <p>Install <a target="installtools" href="http://www.microsoft.com/downloads/details.aspx?familyid=BB4A75AB-E2D4-4C96-B39D-37BAF6B5B1DC&displaylang=en">Microsoft Visual Studio 2005 Team Suite Service Pack 1</a>.</p>
 <p>If you are building from Vista, install <a target="installtools" href="http://www.microsoft.com/downloads/details.aspx?FamilyID=90e2942d-3ad1-4873-a2ee-4acc0aace5b6&displaylang=en">Service Pack 1 Update for Windows Vista</a>.</p>
+<p>Install the following hotfixes to improve Visual Studio's performance and responsiveness:
+<ol>
+<li><a target="installtools" href="http://code.msdn.microsoft.com/KB918559">KB918559</a></li>
+<li><a target="installtools" href="http://code.msdn.microsoft.com/KB935225">KB935225</a></li>
+<li><a target="installtools" href="http://code.msdn.microsoft.com/KB943969">KB943969</a></li>
+<li><a target="installtools" href="http://code.msdn.microsoft.com/KB947315">KB947315</a></li>
+</ol>
+</p>
 <p>Use the default options for these installations.</p>
 <li><p>If not, you can use Visual C++ Express 2005 (newer versions of Visual C++ Express Edition are currently unsupported):</p>
 <p>Install <a target="installtools" href="http://go.microsoft.com/fwlink/?LinkId=51410">Visual C++ 2005 Express</a>.</p>
